kubernetes/kinvoice-k8s/kinvoice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kinvoice
  namespace: khipster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kinvoice
      version: 'v1'
  template:
    metadata:
      labels:
        app: kinvoice
        version: 'v1'
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - kinvoice
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: kinvoice-app
          image: sendilkumarn/kinvoice
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8082
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 120
