kubernetes/kinvoice-k8s/kinvoice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kinvoice
  namespace: khipster
  labels:
    app: kinvoice
spec:
  selector:
    app: kinvoice
  ports:
    - name: http
      port: 80
      targetPort: 8082
