kubernetes/kinvoice-k8s/kinvoice-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kinvoice-virtualservice
  namespace: khipster
spec:
  hosts:
    - kinvoice
  http:
    - route:
        - destination:
            host: kinvoice
            subset: 'v1'
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
